1.4.1
	+ Restored RecycleBin feature lost when merged breadcrumbs
1.3.15
	+ Added 'hide files' directive by default in smb.conf.mas
	+ Bug fix: PDC password policy settings are kept after samba restarts
1.3.14
	+ Add DefaultUser model to be used in users and groups default user
	  template. Admins can select if they wish to enable the file sharing
	  account by default when creating new users.
1.3.13
	+ Disable full_audit until fixed in a newer samba version
1.3.12
	+ Add breadcrumbs
1.3.11
	+ Added report support
1.3.10
	+ bugfix: ignore case when comparing domain and netbios names
	+ Added support for Recycle Bin in shares
	+ bugfix: restore Domain Users with GID 513 and not 512.
	  as this made Domain Admins not work
	+ Remove unused quota related methods
1.3.7
	+ Create .V2 profile directories. Windows Vista looks for them.
	+ remove extendedBackup, data files must be backuped using ebackup
1.3.6
	+ bugfix: do not allow netbios names longer than 15 characters
1.3.4
	+ bugfix: some samba actions never appeared in the access log
1.3.3
	+ bugfix: we dont consults users when users is not configured in EBox::Samba::existsShareResource
1.3.1
	+ bugfix: use right number for Domain Computers group
1.3.0
	+ bugfix: keep sambaMinPwdLength attribute
1.1.30
	+ bugfix: add user works if quota is disabled
	+ bugfix: replaced storeElementByName with store to avoid bug when restoring
1.1.20
	+ samba allows the use of internal virtual ifaces now
	+ bugfix: importFromLdif was calling a maethod that was removed in a previous merge
1.1.10
	+ Only update sambaPaths on users with sambaSamAccount object
	class
	+ UI imrpovement: in general setting some fileds are disabled when
	PDC is not selected
1.1
	+ Bugfix: issue with codepages on shares
	+ Home drive letter can be changed now from general settings
	+ Added new PDC model with password settings
	+ Use the new row() and ids() API
	+ Windows user's profiles are backed up only in extended backups
	+ Enable quota support again