@@ -2,7 +2,7 @@
 
 Sqllogdir = @DATADIR@/ebox/sqllog/
 
-nobase_Sqllog_DATA = samba_access.sql samba_virus.sql samba_quarantine.sql samba_access_report.sql
+nobase_Sqllog_DATA = samba_access.sql samba_virus.sql samba_quarantine.sql samba_access_report.sql samba_virus_report.sql
 
 EXTRA_DIST = $(nobase_Sqllog_DATA)
 
