@@ -1,0 +1,5 @@
+CREATE TABLE samba_virus_report (
+    date DATE,
+    client INET,
+    virus BIGINT
+);
